<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/discoveryProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorStartGradiant" />

    <TextView
        android:id="@+id/MyDeviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/discoveryProgress"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="My Device"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/MyDeviceCardView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyDeviceText"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="100dp"
        card_view:cardBackgroundColor="@color/colorGray"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/MyDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="My Device Name"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/MyDeviceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MyDeviceName"
                android:layout_alignStart="@+id/MyDeviceName"
                android:text="My Device Status"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/MyIpAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MyDeviceStatus"
                android:layout_alignStart="@+id/MyDeviceStatus"
                android:layout_marginBottom="8dp"
                android:text="My Ip Address"
                android:textColor="@color/Black" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/MyDeviceName"
                android:layout_alignBottom="@+id/MyIpAddress"
                android:layout_alignParentStart="true"
                android:src="@drawable/device" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <!--Enable and disable WiFi-->
    <Button
        android:id="@+id/onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/discover"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/discover"
        android:background="@drawable/button_bg"
        android:onClick="TurnOnWiFi"
        android:text="@string/wifi_on_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <!--Discover nearby available peers-->
    <Button
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyDeviceCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:onClick="Discover"
        android:text="@string/discover_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

    <!--Show all available peers in ListView-->
    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/discover"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp">

        <ListView
            android:id="@+id/peerListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />

    </android.support.v4.widget.SwipeRefreshLayout>


    <!--Show Message-->
    <TextView
        android:id="@+id/readMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/swiperefresh"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/message_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible" />

    <!--Write Message-->
    <EditText
        android:id="@+id/writeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="95dp"
        android:paddingBottom="10dp"
        android:visibility="invisible" />

    <!--Send Message-->
    <Button
        android:id="@+id/sendButton"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@id/writeMsg"
        android:layout_alignBottom="@id/writeMsg"
        android:background="@drawable/button_bg"
        android:text="@string/send_btn_text"
        android:textColor="@color/colorWhite"
        android:visibility="invisible" />

    <!-- private mode and group mode -->
    <ToggleButton
        android:id="@+id/privateGroupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/discover"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/discover"
        android:background="@drawable/toggle_button_bg"
        android:text="@string/private_mode"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textOff="@string/private_mode"
        android:textOn="@string/group_mode" />

</RelativeLayout>